src/snapshots/squawk__parse__tests__parsing_variable_show_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: VariableShowStmt(
                    Object({
                        "name": String(
                            "name",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: None,
            },
        ),
    ],
)
