src/snapshots/squawk__parse__tests__reindex_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: ReindexStmt(
                    Object({
                        "kind": Number(
                            0,
                        ),
                        "relation": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    15,
                                ),
                                "relname": String(
                                    "my_index",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    23,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: ReindexStmt(
                    Object({
                        "kind": Number(
                            1,
                        ),
                        "relation": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    39,
                                ),
                                "relname": String(
                                    "table_name",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 24,
                stmt_len: Some(
                    25,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: ReindexStmt(
                    Object({
                        "kind": Number(
                            4,
                        ),
                        "name": String(
                            "table_name",
                        ),
                    }),
                ),
                stmt_location: 50,
                stmt_len: Some(
                    28,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: ReindexStmt(
                    Object({
                        "kind": Number(
                            3,
                        ),
                        "name": String(
                            "table_name",
                        ),
                    }),
                ),
                stmt_location: 79,
                stmt_len: Some(
                    26,
                ),
            },
        ),
    ],
)
